ändring från mongoose till mongodb

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://johannahyll:joni2412@weirdifulscluster.pyul3e5.mongodb.net/
+PORT=3000
+MONGO_URI=mongodb+srv://johannahyll:joni2412@weirdifulscluster.pyul3e5.mongodb.net/weirdiful?retryWrites=true&w=majority&appName=weirdifulsCluster
